# shared_mongodb

./: Cargo.toml  README.md
src/: client.rs  database.rs  lib.rs
